--- a/packages/low-code-decorate/src/pages/Index/components/CenterCanvas/style/editor.css
+++ b/packages/low-code-decorate/src/pages/Index/components/CenterCanvas/style/editor.css
@@ -1,3 +1,10 @@
 .editor{
     height: 100%;
+    position: relative;
+}
+
+.componentsList{
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
