--- a/packages/low-code-decorate/src/pages/Index/components/CenterCanvas/shape/shape.less
+++ b/packages/low-code-decorate/src/pages/Index/components/CenterCanvas/shape/shape.less
@@ -1,7 +1,7 @@
 .shape{
   position: absolute;
   user-select: none;
-  background-color: aliceblue;
+  background-color: transparent;
 
   .mask{
     width: 100%;
