--- a/packages/low-code-decorate/src/pages/Index/components/CenterCanvas/shape/shape.less
+++ b/packages/low-code-decorate/src/pages/Index/components/CenterCanvas/shape/shape.less
@@ -2,14 +2,22 @@
   position: absolute;
   user-select: none;
   background-color: transparent;
-
+  &:hover{
+    .mask{
+      display: block;
+    }
+  }
   .mask{
     width: 100%;
     height: 100%;
-    background: rgba(40, 140, 255, 0.402);
+    background: rgba(82, 163, 255, 0.24);
     position: absolute;
     top: 0;
-    left: 0;    
+    left: 0;
+    display: none;
+    &.block{
+      display: block;
+    }
   }
 }
 .isCurrent{
